@@ -1,6 +1,12 @@
 -- Version 2.5.2, released ...
 
- * Added support for custom world types. This enables you to, for example, easily create maps for the Biomes O' Plenty mod and other custom Minecraft world generators. To use, set the world type to Custom on the Export screen, and press the [...] button to set the generator name to store in the level.dat file, for example BIOMESOP for Biomes O' Plenty
+ * It is now possible to create thick smooth snow layers by creating a Custom Ground Cover layer with the material set to "78: Snow"
+   + It will place a mixture of Snow Blocks and Snow to create a layer that is as thick as you specify and smoothly follows the terrain, the variation setting of the layer, and the layer's edge shape
+   + For nice smooth results, set the edge shape to Smooth and the width high, for example 10
+   + For nice clean edges paint it with a solid brush at 100%, but experiment with rougher edges as well
+   + Note that it will not affect the biome, nor place snow on trees, etc.. To do that, paint Frost in the same location as well
+ * A rare behavioural change that may affect existing worlds: snow blocks (block ID 80) are now considered "insubstantial", meaning they will not block the placement of custom objects or other layers. This allows realistic deep snow layers that will not block the placement of trees, and will bury their lower trunks in a deep layer of snow. If you use snow blocks in your world in the same location as other layers, this change may affect the Export result
+ * Added support for custom world types/generators. This enables you to, for example, easily create maps for the Biomes O' Plenty mod and other custom Minecraft world generators. To use, set the world type to Custom on the Export screen, and press the [...] button to set the generator name to store in the level.dat file, for example BIOMESOP for Biomes O' Plenty
  * A "fit to dimension" button has been added to the image overlay settings on the Configure View screen (Ctrl+V or View menu) which will automatically set the scale and offset so that the image overlay exactly covers (as best as possible) the current dimension
  * Bug fix: resources placed by the Resources layer no longer bleed through steep slopes covered by the "keep steep terrain covered" setting
  * A few small bug fixes and improvements
